# RSDPTeam10

./: .gitignore  LICENSE  NUC_ROBOTNET_WIFI.md  README.md  README_prev.md  auto_pick.py  data_munging.ipynb  get_headers.py  infer_blocks_images.py  infer_live_realsense.py  infer_live_realsense_detector.py  infer_live_realsense_final.py  main.py  pyproject.toml  realsense_dataset_capture.py  run_experiment.py  tcp_bridge.py  test_listen.py
ROS_node/: perception_stable_attrs_node.py
SLAM_2D_Learn/SLAM_2D_Learn/src/leo_explore_interfaces/: CMakeLists.txt  package.xml
SLAM_2D_Learn/SLAM_2D_Learn/src/leo_explore_interfaces/action/: Explore.action
camera_position/: package.xml
camera_position/scripts/: block_localizer_node.py  static_tf_publisher.py  test_block_publisher.py
clf/: train_bin_color.py  train_multitask.py
distances/exp1/: config.yaml
distances/exp2/: config.yaml
distances/exp3/: config.yaml
distances/exp4/: config.yaml
lslidar_catorgrapher/: package.xml  setup.cfg  setup.py
lslidar_catorgrapher/config/: catorgrapher_config.lua  catorgrapher_rviz.rviz  catorgrapher_urdf.urdf
lslidar_catorgrapher/launch/: catorgrapher_calc.py  catorgrapher_launch.py  catorgrapher_rviz.py
lslidar_catorgrapher/lslidar_catorgrapher/: check_block.py  read_map_pos.py
ros2_ws/: LAPTOP_ROS_SETUP.sh  NUC_FASTDDS.sh  NUC_ROS_SETUP.sh  PI_ROS_SETUP.sh
ros2_ws/src/leo_explore/: package.xml  setup.cfg  setup.py
ros2_ws/src/leo_gz_worlds/: CMakeLists.txt  README.md
ros2_ws/src/navigation_2/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/navigation_2/config/: neo_robot.yaml
ros2_ws/src/navigation_2/config/behavior_trees/: navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml
ros2_ws/src/navigation_2/launch/: navigation.launch.py
ros2_ws/src/navigation_2/navigation_2/: navigation_service_node.py
ros2_ws/src/rover_controller/: PLAN.md  TF_SIM_NOTES.md  package.xml  setup.py
ros2_ws/src/rover_controller/launch/: launch_real.py  launch_sim.py
ros2_ws/src/rover_controller/rover_controller/: handle_observations.py  mission_console.py  navigation_goals.py  rover_controller.py  semantic_obstacles.py  sim_arm_joint_state_publisher.py
ros2_ws/src/rover_controller/test/: test_manipulation_retries.py  test_navigation_goals.py  test_semantic_obstacles.py
ros2_ws/src/rover_sim_models/: CMakeLists.txt  package.xml
ros2_ws/src/rover_sim_models/models/bin_blue/: model.sdf
ros2_ws/src/rover_sim_models/models/bin_red/: model.sdf
ros2_ws/src/rover_sim_models/models/bin_yellow/: model.sdf
ros2_ws/src/rover_sim_models/models/block_yellow/: model.config
ros2_ws/src/rover_sim_models/models/surrogate_rover/: model.sdf
src/leo_navigation/: CMakeLists.txt
src/rover_interface/: CMakeLists.txt  package.xml
src/rsdp_perception/: setup.cfg
tools/: export_block_crops.py  export_crops.py  label_crops_tui.py  label_crops_tui_v2.py  make_crop_csv.py
train/blocks_bins_platform/: events.out.tfevents.1764003396.Jinwei.84553.0  opt.yaml
train/blocks_bins_platform2/: events.out.tfevents.1764003594.Jinwei.84780.0  opt.yaml
train/blocks_bins_platform4/: events.out.tfevents.1764021770.Jinwei.91598.0  opt.yaml  results.csv
(+117 files in other folders)
