<?xml version="1.0"?>
<package format="3">
  <name>navigation_2</name>
  <version>0.0.0</version>
  <description>Navigation Package</description>
  <maintainer email="student49@todo.todo">student49</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav2_simple_commander</depend>
  <depend>tf_transformations</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>rover_interface</depend>
  <depend>leo_explore</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
